# Backend/Modules/Core/Modules.Core.App/Queries/GetHabitsData/GetHabitsDataQueryResponse.cs
@@ -7,6 +7,8 @@ public record GetHabitsDataQueryResponse(
     bool active,
     string description,
     string icon,
+    DateOnly? lastCheckedDate,
+    int streak,
     IEnumerable<DailyHabitsDataDto> dailyDatas)
 { }
 
